backend/clients/124160661/683c73ad6b8629fceb510c1d/main.tf
provider "azurerm" {
  features {}
  subscription_id = "ec8df44c-8f95-4e5c-bb49-3ee802164649"
  tenant_id = "dbd6664d-4eb9-46eb-99d8-5c43ba153c61"

}

resource "azurerm_resource_group" "rg" {
  name     = "683c73ad6b8629fceb510c1d-rg"
  location = "eastus"  # Similar to AWS us-east-1
}

resource "azurerm_virtual_network" "vnet" {
  name                = "683c73ad6b8629fceb510c1d-vnet"
  address_space       = ["10.0.0.0/16"]
  location           = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

resource "azurerm_subnet" "subnet" {
  name                 = "683c73ad6b8629fceb510c1d-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_network_security_group" "nsg" {
  name                = "683c73ad6b8629fceb510c1d-nsg"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_public_ip" "pip" {
  name                = "683c73ad6b8629fceb510c1d-pip"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Static"   
  sku                 = "Basic"
}

resource "azurerm_network_interface" "nic" {
  name                = "683c73ad6b8629fceb510c1d-nic"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.pip.id
  }
}

resource "azurerm_network_interface_security_group_association" "nic_nsg" {
  network_interface_id      = azurerm_network_interface.nic.id
  network_security_group_id = azurerm_network_security_group.nsg.id
}

resource "azurerm_linux_virtual_machine" "vm" {
  name                = "683c73ad6b8629fceb510c1d"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  size                = "Standard_B1s"  # Similar to AWS t2.micro
  admin_username      = "azureuser"

  network_interface_ids = [
    azurerm_network_interface.nic.id
  ]

  admin_ssh_key {
    username   = "azureuser"
    public_key = file("//wsl.localhost/Ubuntu/home/naoures/.ssh/id_rsa.pub")  # Note: Azure requires the public key file
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-focal"
    sku       = "20_04-lts"
    version   = "latest"
  }
}

output "azure_vm_public_ip" {
  value       = azurerm_public_ip.pip.ip_address
  description = "The public IP address of the Azure VM"
}
